<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_tools_ros2</name>
  <version>1.0.0</version>
  <description>Free Fleet tools for ROS 2. This packages intends to provide useful tools to work with Free Fleet messages</description>
  <maintainer email="eduard.rius.martinez@gmail.com">Eduard Rius</maintainer>
  <license>Apache License 2.0</license>
  <author email="eduard.rius.martinez@gmail.com">Eduard Rius</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  
  <depend>rclcpp</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>free_fleet</depend>
  
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>